--- a/src/component/Doctor/Doctor.css
+++ b/src/component/Doctor/Doctor.css
@@ -9,8 +9,17 @@
     box-shadow: 5px 5px 8px grey;
     transform: scale(1.05);
 }
-.card-container img{
-    width: 50%;
-    height: 50%;
+.image-container{
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
+    overflow: hidden;
+    margin: auto;
+
+}
+.image-container img{
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
+    object-position: center top;
 }
