--- a/src/component/Event/Event.css
+++ b/src/component/Event/Event.css
@@ -7,6 +7,9 @@
     width: 50%;
     border-bottom: 1px solid #8c7851;
 }
+.text-style{
+    color: #f25042;
+}
 .body{
     width: 80%;
     margin: auto;
